Overall Working Code