@@ -4,6 +4,7 @@ import com.meera.config.Config;
 import com.meera.utils.ExcelDataReader;
 import com.microsoft.playwright.Locator;
 import com.microsoft.playwright.Page;
+import com.microsoft.playwright.options.LoadState;
 import com.microsoft.playwright.options.WaitForSelectorState;
 import com.microsoft.playwright.options.WaitUntilState;
 import org.testng.annotations.DataProvider;
@@ -13,52 +14,21 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.security.SecureRandom;
+import java.util.HashSet;
 import java.util.Map;
-import java.util.concurrent.ThreadLocalRandom;
+import java.util.Set;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import static com.microsoft.playwright.assertions.PlaywrightAssertions.assertThat;
 
 /**
- * Generates a leads CSV and uploads it to a campaign.
+ * Uploads the workspace leads CSV to the selected campaign and verifies it
+ * from the campaign's uploads view.
  * Port of {@code tests/uploadCampaignLeads.spec.js}.
  */
 public class UploadCampaignLeadsTests extends AuthenticatedTest {
-
-    private static String generatePhoneNumber() {
-        int area = ThreadLocalRandom.current().nextInt(800) + 200;
-        int prefix = ThreadLocalRandom.current().nextInt(900) + 100;
-        int line = ThreadLocalRandom.current().nextInt(9000) + 1000;
-        return "+1" + area + prefix + line;
-    }
-
-    private static String randomHex(int bytes) {
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < bytes; i++) {
-            sb.append(String.format("%02x", ThreadLocalRandom.current().nextInt(256)));
-        }
-        return sb.toString();
-    }
-
-    private static String generateCsv(int rowCount) {
-        String campaignId = "1915";
-        String source = "Google";
-        String header =
-                "\"campaign_id\",\"first_name\",\"last_name\",\"country_code\","
-                + "\"state_code\",\"mobile_number\",\"external_system_id\",\"source\"";
-        StringBuilder rows = new StringBuilder(header);
-        for (int i = 0; i < rowCount; i++) {
-            String externalId = "EXT-" + System.currentTimeMillis() + "-" + i + "-" + randomHex(4);
-            String phone = generatePhoneNumber();
-            rows.append("\r\n")
-                .append("\"").append(campaignId).append("\",")
-                .append("\"Mark\",\"Denial\",\"IN\",\"GJ\",")
-                .append("\"").append(phone).append("\",")
-                .append("\"").append(externalId).append("\",")
-                .append("\"").append(source).append("\"");
-        }
-        return rows.toString();
-    }
 
     @DataProvider(name = "editCampaignData")
     public Object[][] editCampaignData() {
@@ -70,12 +40,19 @@ public class UploadCampaignLeadsTests extends AuthenticatedTest {
         System.out.println("Running test case: " + data.get("testCase") + " - Upload Campaign Leads");
         attachPageEventLoggers(page);
 
-        // ---- Build the CSV -------------------------------------------------
-        String csvContent = generateCsv(30);
         Path tempDir = Paths.get("test-results", "temp");
         Files.createDirectories(tempDir);
+        Path templatePath = Paths.get("test-data", "CampaignLeads.csv");
+        if (!Files.exists(templatePath)) {
+            throw new IllegalStateException("Leads template not found: " + templatePath.toAbsolutePath());
+        }
+
+        // The campaign id must match the campaign opened below.
         Path csvPath = tempDir.resolve("upload-leads-" + System.currentTimeMillis() + ".csv");
-        Files.write(csvPath, csvContent.getBytes(StandardCharsets.UTF_8));
+        String csvContent = limitCsvRows(
+                Files.readString(templatePath, StandardCharsets.UTF_8), 50);
+        csvContent = replacePhoneNumbers(csvContent);
+        Files.writeString(csvPath, csvContent, StandardCharsets.UTF_8);
         System.out.println("CSV written to: " + csvPath.toAbsolutePath());
 
         // ---- Step 1: campaign reports -------------------------------------
@@ -97,82 +74,166 @@ public class UploadCampaignLeadsTests extends AuthenticatedTest {
         page.locator("text=\"" + data.get("campaignName") + "\"").first().click();
         page.waitForLoadState(com.microsoft.playwright.options.LoadState.DOMCONTENTLOADED);
         page.waitForTimeout(2000);
-        System.out.println("Step 3 done. URL: " + page.url());
+        String campaignUrl = page.url();
+        String campaignId = extractCampaignId(campaignUrl);
+        System.out.println("Step 3 done. Campaign URL: " + campaignUrl + ", campaign ID: " + campaignId);
 
-        // ---- Step 4: go to upload_leads page ------------------------------
-        System.out.println("Step 4: Navigating directly to upload_leads page...");
-        String campaignId = "1915";
-        page.navigate(Config.BASE_URL + "campaign/upload_leads/" + campaignId,
-                new Page.NavigateOptions()
-                        .setWaitUntil(WaitUntilState.DOMCONTENTLOADED).setTimeout(60000));
-        System.out.println("Upload leads page loaded. URL: " + page.url());
-
-        // ---- Attach the file ----------------------------------------------
-        // The real <input type="file"> is almost always hidden by CSS and triggered
-        // by a styled button/label on top of it. setInputFiles works on hidden
-        // inputs, so DO NOT gate on visibility.
-        Locator fileInput = page.locator("input[type='file']").first();
+        // ---- Step 4: fill the Leads Upload form on the campaign page -------
+        System.out.println("Step 4: Preparing the Leads Upload form...");
+        csvContent = replaceCampaignId(csvContent, campaignId);
+        Files.writeString(csvPath, csvContent, StandardCharsets.UTF_8);
+        Locator uploadForm = page.locator("#upload_lead_form2");
+        uploadForm.waitFor(new Locator.WaitForOptions()
+                .setState(WaitForSelectorState.VISIBLE).setTimeout(30000));
+        Locator fileInput = uploadForm.locator("input.uploadleads[name='lead_file']");
         fileInput.waitFor(new Locator.WaitForOptions()
-                .setState(WaitForSelectorState.ATTACHED).setTimeout(15000));
+                .setState(WaitForSelectorState.ATTACHED).setTimeout(60000));
         fileInput.setInputFiles(csvPath);
-        System.out.println("File attached to the first file input (hidden or not).");
+        System.out.println("Leads file selected: " + csvPath.toAbsolutePath());
 
-        page.waitForTimeout(1000);
+        // ---- Step 5: submit and wait for the 2-3 minute upload -------------
+        Locator uploadBtn = uploadForm.locator("#upload_lead2");
+        uploadBtn.scrollIntoViewIfNeeded();
+        uploadBtn.click(new Locator.ClickOptions().setTimeout(15000));
+        System.out.println("Clicked Leads Upload.");
 
-        // ---- Click the Upload / Submit button -----------------------------
-        Locator uploadBtn = page.getByRole(com.microsoft.playwright.options.AriaRole.BUTTON,
+        // ---- Step 6: open uploads and verify the uploaded lead ------------
+        Page uploadsPage = openUploadsView();
+        refreshUploadsPageEveryThirtySeconds(uploadsPage);
+        Locator latestUpload = uploadsPage.locator("table tbody tr").first();
+        Locator completeStatus = latestUpload.locator("td").filter(
+                new Locator.FilterOptions().setHasText(
+                        Pattern.compile("^\\s*Complete\\s*$", Pattern.CASE_INSENSITIVE)));
+        assertThat(completeStatus).isVisible(
+                new com.microsoft.playwright.assertions.LocatorAssertions.IsVisibleOptions()
+                        .setTimeout(60_000));
+        assertThat(latestUpload).containsText("50 (100%)",
+                new com.microsoft.playwright.assertions.LocatorAssertions.ContainsTextOptions()
+                        .setTimeout(60_000));
+        System.out.println("Latest upload is complete: 50 (100%)");
+    }
+
+    private void refreshUploadsPageEveryThirtySeconds(Page uploadsPage) {
+        System.out.println("Waiting 2 minutes for lead processing and refreshing every 30 seconds...");
+        for (int refreshNumber = 1; refreshNumber <= 4; refreshNumber++) {
+            uploadsPage.waitForTimeout(30_000);
+            uploadsPage.reload(new Page.ReloadOptions()
+                    .setWaitUntil(WaitUntilState.DOMCONTENTLOADED)
+                    .setTimeout(60_000));
+            System.out.println("Uploads page refreshed (" + refreshNumber + "/4): "
+                    + uploadsPage.url());
+        }
+    }
+
+    private void waitForUploadResult() {
+        try {
+            page.waitForFunction(
+                    "() => {"
+                            + " const success = document.querySelector("
+                            + "'.swal2-popup.swal2-icon-success, .swal2-success');"
+                            + " const successText = /successfully uploaded|upload completed/i.test("
+                            + "document.body.innerText || '');"
+                            + " const error = document.querySelector("
+                            + "'.error, .invalid, .text-danger, .help-block, "
+                            + ".field-validation-error, [aria-invalid=\"true\"]');"
+                            + " return (success && success.offsetParent !== null) || successText"
+                            + " || (error && error.offsetParent !== null);"
+                            + "}",
+                    null,
+                    new Page.WaitForFunctionOptions().setTimeout(180_000));
+        } catch (RuntimeException e) {
+            System.out.println("Lead upload is still processing after 180 seconds.");
+        }
+    }
+
+    private Page openUploadsView() {
+        Locator uploadsControl = page.getByRole(com.microsoft.playwright.options.AriaRole.LINK,
+                new Page.GetByRoleOptions()
+                        .setName(Pattern.compile("uploads?", Pattern.CASE_INSENSITIVE)))
+                .or(page.getByRole(com.microsoft.playwright.options.AriaRole.BUTTON,
                         new Page.GetByRoleOptions()
-                                .setName(Pattern.compile("upload|submit", Pattern.CASE_INSENSITIVE)))
-                .or(page.locator("input[type='submit']"))
+                                .setName(Pattern.compile("uploads?", Pattern.CASE_INSENSITIVE))))
                 .first();
+        uploadsControl.waitFor(new Locator.WaitForOptions()
+                .setState(WaitForSelectorState.VISIBLE).setTimeout(30000));
+        Page uploadsPage = page.waitForPopup(uploadsControl::click);
+        uploadsPage.waitForLoadState(LoadState.DOMCONTENTLOADED);
+        System.out.println("Uploads view opened. URL: " + uploadsPage.url());
+        return uploadsPage;
+    }
 
-        if (uploadBtn.count() > 0) {
-            uploadBtn.click();
-            System.out.println("Clicked the Upload/Submit button.");
-        } else {
-            // Fallback: scan everything and log it so you can see the real labels.
-            Locator upButtons = page.locator("button, input[type='submit']");
-            int upBtnCount = upButtons.count();
-            System.out.println("No upload button matched by role; scanning all buttons: " + upBtnCount);
-            for (int i = 0; i < upBtnCount; i++) {
-                String text = upButtons.nth(i).textContent();
-                text = text == null ? "" : text.trim();
-                boolean vis = upButtons.nth(i).isVisible();
-                System.out.println("  Button[" + i + "]: visible=" + vis + " text=\""
-                        + text.substring(0, Math.min(60, text.length())) + "\"");
-                if (vis && Pattern.compile("upload|submit", Pattern.CASE_INSENSITIVE).matcher(text).find()) {
-                    upButtons.nth(i).click();
-                    System.out.println("Clicked button[" + i + "]: \""
-                            + text.substring(0, Math.min(60, text.length())) + "\"");
-                    break;
+    private static String limitCsvRows(String csvContent, int maximumRows) {
+        String[] lines = csvContent.split("\\R");
+        if (lines.length <= maximumRows + 1) {
+            return csvContent;
+        }
+        StringBuilder limited = new StringBuilder(lines[0]);
+        for (int i = 1; i <= maximumRows; i++) {
+            limited.append(System.lineSeparator()).append(lines[i]);
+        }
+        return limited.toString();
+    }
+
+    private static String extractCampaignId(String campaignUrl) {
+        Matcher matcher = Pattern.compile("/campaign/edit(?:7)?/(\\d+)(?:[/?#]|$)")
+                .matcher(campaignUrl);
+        if (!matcher.find()) {
+            throw new IllegalStateException("Could not extract campaign ID from URL: " + campaignUrl);
+        }
+        return matcher.group(1);
+    }
+
+    private static String replaceCampaignId(String csvContent, String campaignId) {
+        String[] lines = csvContent.split("\\R", -1);
+        if (lines.length < 2 || !lines[0].toLowerCase().contains("campaign_id")) {
+            throw new IllegalArgumentException("Leads CSV must contain a campaign_id header and at least one row.");
+        }
+        for (int i = 1; i < lines.length; i++) {
+            if (!lines[i].trim().isEmpty()) {
+                int comma = lines[i].indexOf(',');
+                if (comma < 1) {
+                    throw new IllegalArgumentException("Invalid leads CSV row: " + lines[i]);
                 }
+                lines[i] = campaignId + lines[i].substring(comma);
             }
         }
+        return String.join(System.lineSeparator(), lines);
+    }
 
-        // ---- Step 5: verify result ----------------------------------------
-        System.out.println("Step 5: Checking result...");
-        System.out.println("URL: " + page.url());
-
-        Locator successLocator = page.locator("text=Successfully Uploaded")
-                .or(page.locator("text=Uploaded Successfully"))
-                .or(page.locator("text=/upload(ed)?/i"))
-                .or(page.locator(".swal2-success"))
-                .or(page.locator(".swal2-popup"));
-
-        try {
-            assertThat(successLocator.first()).isVisible(
-                    new com.microsoft.playwright.assertions.LocatorAssertions.IsVisibleOptions()
-                            .setTimeout(20000));
-            System.out.println("Step 5 done. Upload confirmed.");
-        } catch (AssertionError err) {
-            // Capture what the page actually shows so the real selector is obvious.
-            Path shotPath = tempDir.resolve("upload-fail-" + System.currentTimeMillis() + ".png");
-            page.screenshot(new Page.ScreenshotOptions().setPath(shotPath).setFullPage(true));
-            System.out.println("FAILURE SCREENSHOT: " + shotPath.toAbsolutePath());
-            String bodyText = page.locator("body").innerText();
-            bodyText = bodyText.substring(0, Math.min(2000, bodyText.length()));
-            System.out.println("VISIBLE PAGE TEXT (first 2000 chars):\n" + bodyText);
-            throw err;
+    private static String replacePhoneNumbers(String csvContent) {
+        String[] lines = csvContent.split("\\R", -1);
+        String[] headers = lines[0].split(",", -1);
+        int phoneIndex = findColumnIndex(headers, "mobile_number");
+        if (phoneIndex < 0) {
+            throw new IllegalArgumentException("Leads CSV is missing mobile_number.");
         }
+
+        SecureRandom random = new SecureRandom();
+        Set<String> generatedNumbers = new HashSet<>();
+        for (int i = 1; i < lines.length; i++) {
+            if (lines[i].trim().isEmpty()) {
+                continue;
+            }
+            String[] values = lines[i].split(",", -1);
+            if (values.length <= phoneIndex) {
+                throw new IllegalArgumentException("Invalid leads CSV row: " + lines[i]);
+            }
+            String phone;
+            do {
+                phone = "999" + String.format("%07d", random.nextInt(10_000_000));
+            } while (!generatedNumbers.add(phone));
+            values[phoneIndex] = phone;
+            lines[i] = String.join(",", values);
+        }
+        return String.join(System.lineSeparator(), lines);
+    }
+
+    private static int findColumnIndex(String[] headers, String expectedHeader) {
+        for (int i = 0; i < headers.length; i++) {
+            if (headers[i].replace("\"", "").trim().equalsIgnoreCase(expectedHeader)) {
+                return i;
+            }
+        }
+        return -1;
     }
 }
